[package]
name = "find-my-sht"
version = "0.1.0"
edition = "2021"
authors = ["Inquest Agent L"]
repository = "https://github.com/zerthox/nexus-rs"

[dependencies]
log = "0.4.21"
nexus = { git = "https://github.com/Zerthox/nexus-rs", features = ["log", "hook", "serde"] }
serde = { version = "1.0.204", features = ["derive", "default"] }
rmp-serde = "1.3.0"
serde_json = "1.0.121"
anyhow = "1.0.86"
ureq = { version = "2.10.0", features = ["json", "native-tls"] }
tantivy = "0.22.0"
chrono = { version = "0.4.38", features = ["clock","serde"] }

[lib]
crate-type = ["cdylib"]